--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>IMcss - CSS Framework by IcyMat</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<link rel="Stylesheet" type="text/css" href="im-css.css">
-		<script type="text/javascript" src="im-css.js"></script>
+		<link rel="Stylesheet" type="text/css" href="http://img.icymat.pl/imcss/im-css.css">
+		<script type="text/javascript" src="http://img.icymat.pl/imcss/im-css.js"></script>
 		<style>
 		.icon {
 			width: 40px;
