New icons, fixed CSS bugs

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>IMcss - CSS Framework by IcyMat</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<link rel="Stylesheet" type="text/css" href="http://img.icymat.pl/imcss/im-css.css">
-		<script type="text/javascript" src="http://img.icymat.pl/imcss/im-css.js"></script>
+		<link rel="Stylesheet" type="text/css" href="im-css.css">
+		<script type="text/javascript" src="im-css.js"></script>
 		<style>
 		.icon {
 			width: 40px;
@@ -59,6 +59,8 @@
 						<li><span class="icon icon-circle"></span> icon-circle</li>
 						<li><span class="icon icon-unselect"></span> icon-unselect</li>
 						<li><span class="icon icon-github"></span> icon-github</li>
+						<li><span class="icon icon-squares"></span> icon-squares</li>
+						<li><span class="icon icon-circles"></span> icon-circles</li>
 					</ul>
 				</div>
 				
@@ -68,6 +70,8 @@
 						<li><span class="icon icon-plus"></span> icon-plus</li>
 						<li><span class="icon icon-facebook"></span> icon-facebook</li>
 						<li><span class="icon icon-facebook-text"></span> icon-facebook-text</li>
+						<li><span class="icon icon-preloader-square"></span> icon-preloader-square</li>
+						<li><span class="icon icon-preloader"></span> icon-preloader</li>
 					</ul>
 				</div>
 			</div>
